# aigateway-local

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.claude/: launch.json
docs/adr/: 001-stack-selection.md  002-modular-hexagonal-pattern.md  003-arq-over-celery-rq.md  004-minio-for-storage.md  005-sse-with-redis-pubsub.md
grafana/dashboards/: local_ai_gateway.json
grafana/provisioning/dashboards/: dashboard.yml
migrations/: env.py
src/api/: app.py  lifespan.py  middleware.py
src/core/: config.py  database.py  domain.py  exceptions.py  logging.py  metrics.py  redis.py  storage.py
src/modules/artifacts/: router.py  schemas.py  service.py
src/modules/auth/: middleware.py
src/modules/events/: publisher.py  router.py  schemas.py
src/modules/jobs/: models.py  repository.py  router.py  schemas.py  service.py
src/modules/providers/: base.py  registry.py
src/modules/providers/diffusers/: config.py  provider.py
src/modules/providers/local_llm/: config.py  provider.py
src/modules/providers/local_stt/: provider.py
src/modules/providers/local_tts/: provider.py
src/modules/providers/stub/: provider.py
src/modules/queue/: dispatcher.py  scheduler.py
src/modules/status/: router.py
src/modules/uploads/: router.py  schemas.py
tests/: conftest.py  test_executor.py  test_jobs_api.py
workers/: executor.py  main.py
