[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-ai-gateway"
version = "0.1.0"
description = "Multimodal local AI gateway with job queue, SSE progress, and provider adapters"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",      # file uploads

    # Data / validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # ORM / DB
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Queue / workers
    "arq>=0.25.0",

    # Cache / pub-sub
    "redis[hiredis]>=5.0.0",

    # Object storage (MinIO / S3-compatible)
    "aiobotocore>=2.13.0",

    # Observability
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",        # async test client for FastAPI
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-redis",
]

# AI engines — installed separately on the Ubuntu machine, not required for core
diffusers = [
    "diffusers>=0.30.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "torch>=2.4.0",
]

stt = [
    "faster-whisper>=1.0.0",    # CTranslate2 backend — 4x faster than openai-whisper
    # Alternative (if faster-whisper not available): pip install openai-whisper
]

tts = [
    "TTS>=0.22.0",              # Coqui XTTS v2 / Kokoro / Piper via LocalTTSProvider
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
